--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,14 +1,16 @@
 <p style="color: green"><%= notice %></p>
+<div class="container">
+  <h1>Restaurants</h1>
 
-<h1>Restaurants</h1>
-
-<ul>
+<ul class="list-group">
   <% @restaurants.each do |restaurant| %>
-    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+    <li class="list-group-item"><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
   <% end %>
 </ul>
 
-<%= link_to "New restaurant", new_restaurant_path  %>
+<%= link_to "New restaurant", new_restaurant_path, class: "btn btn-primary" %>
+</div>
+
 <%# <%= render "list", restaurants: @restaurants %>
 
 <%# <%= link_to "New restaurant", new_restaurant_path %>
